RESOLVED FIXED23281
Fix the Chromium Win build
https://bugs.webkit.org/show_bug.cgi?id=23281
Summary Fix the Chromium Win build
Dmitry Titov
Reported 2009-01-12 18:45:39 PST
My recent change that introduced WTF::currentTime used PLATFORM(WIN) for all windows builds that are not GTK and not WX. This is incorrect. PLATFORM(WIN) is basically "Apple Win Port", while PLATFORM(WIN_OS) is "any port built on Windows", which I actually wanted. In particular, PLATFORM(CHROMIUM) does not define WIN but defines WIN_OS. Patch is coming as soon as I finish both Win builds (regular and scons).
Attachments
Proposed patch (3.46 KB, patch)
2009-01-12 20:04 PST, Dmitry Titov
darin: review+
Mark Rowe (bdash)
Comment 1 2009-01-12 19:19:23 PST
PLATFORM(WIN) indicates a port using high-level Windows functionality, such as GDI and so on, while WIN_OS indicates low-level functionality such as threading primitives. Neither indicates which port is being built.
Eric Seidel (no email)
Comment 2 2009-01-12 19:50:33 PST
(In reply to comment #1) > PLATFORM(WIN) indicates a port using high-level Windows functionality, such as > GDI and so on, while WIN_OS indicates low-level functionality such as threading > primitives. Neither indicates which port is being built. > There has been historical disagreement on this point. It would be very useful to me (and likely others) if you, or someone else from the project could post to webkit-dev or write on the wiki what each of the PLATFORM(*) defines mean.
Dmitry Titov
Comment 3 2009-01-12 20:04:56 PST
Created attachment 26659 [details] Proposed patch bdash: thanks! It seems that for time querying purposes, the WIN_OS is the right one... So here is the patch. The change affects only Chromium builds since they are PLATFORM(CHROMIUM) && PLATFORM(WIN_OS) which was not covered before. WIN, GTK, QT and WX stay the same. The only reason for GTK and WX to be here is to match occasional usage of their time getters.
Mark Rowe (bdash)
Comment 4 2009-01-12 20:21:17 PST
(In reply to comment #2) > (In reply to comment #1) > > PLATFORM(WIN) indicates a port using high-level Windows functionality, such as > > GDI and so on, while WIN_OS indicates low-level functionality such as threading > > primitives. Neither indicates which port is being built. > > > > There has been historical disagreement on this point. It would be very useful > to me (and likely others) if you, or someone else from the project could post > to webkit-dev or write on the wiki what each of the PLATFORM(*) defines mean. This has been discussed *at length* on webkit-dev in the past.
Darin Adler
Comment 5 2009-01-13 07:41:04 PST
Comment on attachment 26659 [details] Proposed patch r=me
Dmitry Titov
Comment 6 2009-01-13 11:24:25 PST
Note You need to log in before you can comment on or make changes to this bug.