2009-01-13  Dmitry Titov  <dimich@chromium.org>

Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=23281
        Fix the Chromium Win build.
        Need to use PLATFORM(WIN_OS) instead of PLATFORM(WIN).
        Moved GTK and WX up in #if sequence because they could come with WIN_OS too,
        while they have their own implementation even on Windows.

        * wtf/CurrentTime.cpp:
        (WTF::currentTime):

Canonical link: https://commits.webkit.org/32064@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@39866 268f45cc-cd09-0410-ab3c-d52691b4dbfc